Add boostrap, modify link helper

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -8,11 +8,14 @@
 </div>
 
 <p>
-  I’m a software engineer at Configit, where I help customers solve Complex Configuration problems with Configit’s patented VT technology. I have a passion for writing awesome software that makes people’s lives better. I am allow about learning new and old technologies. One day I am learning react-native, and the next I could be learning about the Linux Kernel.
+  I’m a software engineer at Configit, where I help customers solve Complex Configuration problems with Configit’s patented VT technology. 
+  I have a passion for writing awesome software that makes people’s lives better. 
+  I am all about learning new and old technologies. One day I am learning react-native, 
+  and the next I could be learning about the Linux Kernel.
 </p>
 
 <p>
-  Professionaly my technology stack is:  
+  Professionaly my technology stack is:
   <ul>
     <li>.NET (C#)</li>
     <li>ASP.NET (mvc and web api)</li>
