--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -7,13 +7,41 @@
     <title>@ViewData["Title"] - Website</title>
 
     <environment names="Development,Staging,Production">
+        <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
         <link rel="stylesheet" href="~/css/site.css" />
     </environment>
 </head>
 <body>
-    <div>
-      @RenderBody()
+  <nav class="navbar navbar-inverse navbar-fixed-top">
+    <div class="container">
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>          
+          <span class="icon-bar"></span>
+        </button>
+        <a class="navbar-brand" href="/">Nate Palmer</a>
+      </div>
+      <div>
+        <div id="navbar" class="collapse navbar-collapse">
+          <ul id="site-menu" class="nav navbar-nav">
+            <menulink controller-name="Home" action-name="Index" menu-text="Home"></menulink>
+            <menulink controller-name="Home" action-name="Contact" menu-text="Contact"></menulink>
+          </ul>
+        </div>
+      </div>
     </div>
-    @RenderSection("scripts", required: false)
+  </nav>
+
+  <div class="conatainer">
+    @RenderBody()
+  </div>
+
+<script src="~/lib/jquery/dist/jquery.min.js"></script>
+<script src="~/lib/bootstrap/dist/js/bootstrap.min.js"></script>
+<script src="~/js/site.js"></script>
+
+  @RenderSection("scripts", required: false)
 </body>
 </html>
